added the required field validation

--- a/src/screens/login/Login.css
+++ b/src/screens/login/Login.css
@@ -7,3 +7,14 @@
 .formControl {
     width: 260px;
 }
+.red{
+    color: red;
+}
+
+.dispNone {
+    display: none;
+}
+
+.dispBlock {
+    display: block;
+}
