--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -5,15 +5,7 @@
     margin: 0px;
 }
 
-.logo {
-    float: left;
-    color: #fff;
-    font-weight: 18px;
-    justify-content: center;
-    padding-left: 8px;
-    text-decoration-line: none;
-    padding-top: 14px;
-}
+/* Styles added for Search box implemented */
 
 .searchBox {
     height: 35px;
@@ -32,9 +24,65 @@
 
 .searchText{
     padding-bottom: 0px;
+    margin-top: -26px;
+    margin-left: 26px;
 }
 
 .formControl {
     width: 150px;
      height: 30px;
 }
+
+.profilePic {
+    float: right;
+}
+
+/* Styles added for user profile icon implemented */
+
+
+.logo {
+    float: left;
+    color: #fff;
+    font-weight: 18px;
+    justify-content: center;
+    padding-left: 8px;
+    text-decoration-line: none;
+    padding-top: 14px;
+}
+
+.iconBtn{
+    float: right;
+    width: 40px;
+    justify-content: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.profilePic {
+   width: 40px;
+   margin-right: 20px;
+   height: 40px;
+   margin-right: 0px;
+   margin-left: 0px;
+   
+}
+
+.avatar {
+    margin-left: auto;
+    margin-right: 20px;
+    justify-content: center;
+    margin-bottom: 5px;
+   }
+
+.menuBar {
+    position: absolute;
+    background-color: grey;
+    color: black;
+    padding-top: 20px;
+}
+
+.menuList{
+    width: 200px;
+}
+
+
