--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,111 +1,59 @@
-.flex-container {
+/* style for the div conatining the grid  */
+.flex-container{
+    width: 100%;
     display: flex;
+    flex-direction: column;
+    flex-flow: wrap;
 }
 
-.flex-container>div {
-    margin: 16px;
+/* style for the line below image and above caption */
+.horizontal-rule{
+    height: 2px;
+    background: rgb(223,223,223);
+    margin-top: 10px;
+}
+/* style for the image caption */
+.image-caption{
+    padding-top: 5px;
+    font-family: auto;
+    font-size: 18px;
+}
+/* style for the hashtags of the image */
+.image-hashtags{
+    font-size: 16px;
+    padding-top: 3px;
+    font-family: auto;
+    color: rgb(122,188,255);
 }
 
-.user-image-grid-item {
-    margin: 15px;
-    margin-left: 8px;
-    margin-right: 5px;
-    width: auto;
-    height: auto;
-    scale: 100%;
-    justify-content: center;
+/* style for the favorite icon when liked   */
+.image-liked-icon{
+
+    color:red; 
+
 }
 
-.cardImg {
-    width: 50%;
+/* style for the favorite icon when unliked   */
+.image-like-icon{
+
+    color: black;
 }
 
-.userImage{
-    min-width: 400px;
-    min-height: 400px;
-    scale: 100%;
-    margin-top: 0px;
-    position: relative;
-    justify-content: center;
+
+/* style for the display of comment  */
+.comment-display{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
 }
 
-/* Card common styles */
-
-.profilePic {
-    width: 50px;
-    padding: 0px;
-    height: 50px;
-    margin-left: 5px;
-    justify-content: center;
+/* style for the comment text  */
+.comment-text{
+    padding-left:10px;
+    width:100%;
 }
 
-.cardStyle {
-    width: 280px;
-    padding: 32px 64px 32px 64px;
-    margin: auto;
-    text-align: left;
-}
-
-.iconBtn{
-    float: right;
-    width: 100px;
-    justify-content: center;
-}
-
-.formControl{
-    width: 350px;
-}
-
-/*   */
-
-.captionText{
-    text-align: justify;
-    margin-left: 10px;
-    margin-bottom: 0px;
-}
-
-.captionTag{
-    font-weight: bold;
-    text-align: justify;
-    margin-left: 10px;
-    color: lightblue;
-    margin-top: 0px;
-    padding-bottom: 110px;
-   
-}
-
-.favIcon {
-    float: left;
-    color: red;
-    
-}
-
-.like{
-    float: right;
-    margin-right: 385px;
-    margin-top: 13px;
-}
-
-.AddBtn {
-    float: right;
-    margin-left: 0px;
-}
-
-#addComment {
-    width: 250px;
-    margin-right: 0px;
-}
-
-.menuList {
-    width: 200px;
-}
-
-.comments-block{
-   padding-top: 10px;
-   margin-left: 0px;
-   padding-left: 0px;
-}
-
-.comment-display {
-    margin-left: 40px;
+/* style for the commented username */
+.comment-username{
+    font-size: inherit;
 }
