--- a/src/screens/login/Login.css
+++ b/src/screens/login/Login.css
@@ -1,20 +1,34 @@
-.cardStyle {
-    width: 280px;
-    padding: 32px 64px 32px 64px;
-    margin: auto;
-    text-align: left;
+.login-header{
+    font-size: 30px;
 }
-.formControl {
-    width: 260px;
+
+.login-card{
+    display: block;
+    position: relative;
+    top: 10%;
+    bottom: 40%;
+    left: 37%;
+    right: 40%;
+    height: fit-content;
+    width: 30%;
+    overflow: visible;
+    border-radius: 4px;
+    outline: none;
+    padding: 20px 40px;
 }
+
+.dispNone{
+    display: none;
+}
+
+.dispBlock{
+    display: block;
+}
+
 .red{
     color: red;
 }
 
-.dispNone {
-    display: none;
-}
-
-.dispBlock {
-    display: block;
+.login-btn{
+    cursor: pointer;
 }
