--- a/src/screens/login/Login.css
+++ b/src/screens/login/Login.css
@@ -1,34 +1,19 @@
-.login-header{
-    font-size: 30px;
+.login-card {
+    width: 400px;
+    padding: 50px;
+    margin: 20px auto;
+}
+  
+.form-field {
+    margin-bottom: 15px !important;
 }
 
-.login-card{
-    display: block;
-    position: relative;
-    top: 10%;
-    bottom: 40%;
-    left: 37%;
-    right: 40%;
-    height: fit-content;
-    width: 30%;
-    overflow: visible;
-    border-radius: 4px;
-    outline: none;
-    padding: 20px 40px;
+.error-msg {
+    color: #f44336;
+    font-size: 14px;
+    margin-top: -10px;
 }
 
-.dispNone{
-    display: none;
-}
-
-.dispBlock{
-    display: block;
-}
-
-.red{
-    color: red;
-}
-
-.login-btn{
-    cursor: pointer;
+.login-button {
+    margin-top: 15px !important;
 }
