--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,59 +1,31 @@
-/* style for the div conatining the grid  */
-.flex-container{
+.post {
+    margin: 10px !important;
+  }
+  
+  .user-img {
+    width: 100px;
+    height: 100px;
+    clip-path: circle(34%);
+  }
+  
+  .post-details > img {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-flow: wrap;
-}
-
-/* style for the line below image and above caption */
-.horizontal-rule{
-    height: 2px;
-    background: rgb(223,223,223);
-    margin-top: 10px;
-}
-/* style for the image caption */
-.image-caption{
-    padding-top: 5px;
-    font-family: auto;
-    font-size: 18px;
-}
-/* style for the hashtags of the image */
-.image-hashtags{
-    font-size: 16px;
-    padding-top: 3px;
-    font-family: auto;
-    color: rgb(122,188,255);
-}
-
-/* style for the favorite icon when liked   */
-.image-liked-icon{
-
-    color:red; 
-
-}
-
-/* style for the favorite icon when unliked   */
-.image-like-icon{
-
-    color: black;
-}
-
-
-/* style for the display of comment  */
-.comment-display{
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-}
-
-/* style for the comment text  */
-.comment-text{
-    padding-left:10px;
-    width:100%;
-}
-
-/* style for the commented username */
-.comment-username{
-    font-size: inherit;
-}
+    margin-bottom: 10px;
+  }
+  
+  .m-btm {
+    margin-bottom: 5px !important;
+  }
+  
+  .hashtag {
+    color: #429be8;
+  }
+  
+  .like-post {
+    margin-right: 10px;
+    cursor: pointer;
+  }
+  
+  .comment-container {
+    margin-top: 40px;
+  }
